[gd_scene load_steps=7 format=3 uid="uid://bmn38mukktuxr"]

[ext_resource type="Theme" uid="uid://bjowy0ujxwwvw" path="res://DefaultTheme.tres" id="1_4mj0i"]
[ext_resource type="Script" uid="uid://dcth4qnfh1qj2" path="res://player_panel.gd" id="1_86pc1"]
[ext_resource type="FontFile" uid="uid://bijiwbc6t0nur" path="res://art/ARIAL.TTF" id="2_dvush"]
[ext_resource type="Texture2D" uid="uid://padk2qo63rtk" path="res://art/player_sprites/select32.png" id="3_eepqy"]

[sub_resource type="Theme" id="Theme_86pc1"]

[sub_resource type="LabelSettings" id="LabelSettings_dvush"]
font = ExtResource("2_dvush")
font_size = 12
font_color = Color(0, 0, 0, 1)

[node name="PlayerPanel" type="Control"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 512.0
script = ExtResource("1_86pc1")
player_icon_ready = Array[bool]([false, false, false, false])
player_location_ready = Array[bool]([false, false, false, false])

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 512.0
theme = ExtResource("1_4mj0i")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer_Title" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 5

[node name="LabelPlayerTitle" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer_Title"]
layout_mode = 2
text = "Agents"
horizontal_alignment = 1

[node name="MarginContainer_Agent01" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_86pc1")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="VBoxContainer_Agent01" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MarginContainer_LabelAgent01" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01"]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 5

[node name="Label_Agent01" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/MarginContainer_LabelAgent01"]
layout_mode = 2
text = "Agent 1"
label_settings = SubResource("LabelSettings_dvush")
horizontal_alignment = 1
vertical_alignment = 3

[node name="HBoxContainer_Agent01" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ButtonIcon_Agent01" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent01"]
layout_mode = 2
icon = ExtResource("3_eepqy")

[node name="TextureRect_Agent01" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent01/ButtonIcon_Agent01"]
visible = false
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("3_eepqy")

[node name="ButtonStart_Agent01" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent01"]
layout_mode = 2
theme = ExtResource("1_4mj0i")
theme_override_font_sizes/font_size = 12
text = "Select Start"

[node name="ButtonMove_Agent01" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent01"]
visible = false
layout_mode = 2
text = "Move"

[node name="MarginContainer_LabelAgent02" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01"]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 5

[node name="Label_Agent02" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/MarginContainer_LabelAgent02"]
layout_mode = 2
text = "Agent 2"
label_settings = SubResource("LabelSettings_dvush")
horizontal_alignment = 1
vertical_alignment = 3

[node name="HBoxContainer_Agent02" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ButtonIcon_Agent02" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent02"]
layout_mode = 2
icon = ExtResource("3_eepqy")

[node name="TextureRect_Agent02" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent02/ButtonIcon_Agent02"]
visible = false
layout_mode = 2
offset_left = 9.0
offset_right = 41.0
offset_bottom = 32.0
texture = ExtResource("3_eepqy")

[node name="ButtonStart_Agent02" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent02"]
layout_mode = 2
theme = ExtResource("1_4mj0i")
theme_override_font_sizes/font_size = 12
text = "Select Start"

[node name="ButtonMove_Agent02" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent02"]
visible = false
layout_mode = 2
text = "Move"

[node name="MarginContainer_LabelAgent03" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01"]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 5

[node name="Label_Agent03" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/MarginContainer_LabelAgent03"]
layout_mode = 2
text = "Agent 3"
label_settings = SubResource("LabelSettings_dvush")
horizontal_alignment = 1
vertical_alignment = 3

[node name="HBoxContainer_Agent03" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ButtonIcon_Agent03" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent03"]
layout_mode = 2
icon = ExtResource("3_eepqy")

[node name="TextureRect_Agent03" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent03/ButtonIcon_Agent03"]
visible = false
layout_mode = 2
offset_left = 9.0
offset_right = 41.0
offset_bottom = 32.0
texture = ExtResource("3_eepqy")

[node name="ButtonStart_Agent03" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent03"]
layout_mode = 2
theme = ExtResource("1_4mj0i")
theme_override_font_sizes/font_size = 12
text = "Select Start"

[node name="ButtonMove_Agent03" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent03"]
visible = false
layout_mode = 2
text = "Move"

[node name="MarginContainer_Done" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Button_SetupDone" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer_Done"]
layout_mode = 2
disabled = true
text = "Complete Setup"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent01/ButtonIcon_Agent01" to="." method="_on_button_icon_agent_01_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent01/ButtonStart_Agent01" to="." method="_on_button_start_agent_01_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent02/ButtonIcon_Agent02" to="." method="_on_button_icon_agent_02_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent02/ButtonStart_Agent02" to="." method="_on_button_start_agent_02_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent03/ButtonIcon_Agent03" to="." method="_on_button_icon_agent_03_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer_Agent01/VBoxContainer_Agent01/HBoxContainer_Agent03/ButtonStart_Agent03" to="." method="_on_button_start_agent_03_pressed"]
